# swexplorer

./: .editorconfig  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
scripts/: bootstrap.sh  clean.sh
src/swexplorer/: asgi.py  wsgi.py
src/swexplorer/apps/characters/: admin.py  apps.py  models.py  resources.py  urls.py  views.py
src/swexplorer/apps/characters/migrations/: 0001_initial.py
src/swexplorer/apps/characters/templates/characters/: dataset.html  index.html
src/swexplorer/conf/: settings.py  urls.py
src/swexplorer/templates/: base.html
